# app/Models/TelegramUser.php
@@ -9,11 +9,11 @@ use MongoDB\Laravel\Eloquent\Model;
  * @property string $first_name
  * @property string $last_name
  * @property string $username
+ * @property TelegramUserProfile|null $profile
  */
 class TelegramUser extends Model
 {
     protected $connection = 'mongodb';
     protected $collection = 'telegram_users';
     protected $fillable = ['user_id', 'first_name', 'last_name', 'username'];
-
 }
