# app/Models/TelegramUserProfile.php
@@ -1,0 +1,12 @@
+<?php
+
+namespace App\Models;
+
+class TelegramUserProfile
+{
+    public string $name;
+    public ?string $city = null;
+    public ?string $description = null;
+    public ?string $company = null;
+    public ?string $picture = null;
+}
